tests/errors/diagnostics/suggestion_tie_deterministic.pts
function main() : void {
  int lark = 1;
  int mark = 2;
  int x = nark;
}
